--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div class="container">
     <h1>⚠️ Simulation de phishing</h1>
-    <p>Vous venez de cliquer sur un lien suspect dans un e-mail de test envoyé par notre équipe qualité.</p>
+    <p>Vous venez de cliquer sur un lien suspect dans un e-mail de test envoyé par notre équipe qualité Roucadil.</p>
     <p>Dans un contexte réel, ce lien aurait pu :</p>
     <ul>
       <li>Voler vos identifiants</li>
